--- a/public/bio.html
+++ b/public/bio.html
@@ -590,7 +590,7 @@
         <i class="fas fa-chevron-right text-white/70 text-sm"></i>
       </a>
 
-      <a href="index.html#portfolio-preview"
+      <a href="index.html#projetos"
          class="link-button p-4 flex items-center text-gray-700 no-underline fade-in-up">
         <i class="fas fa-folder-open link-icon mr-4"></i>
         <div class="flex-1">
