--- a/public/bio.html
+++ b/public/bio.html
@@ -238,7 +238,7 @@
       color: rgba(255, 255, 255, 0.9);
     }
 
-    /* BioPage Max Features */
+    /* BioCard Max Features */
     .multimedia-section {
       background: rgba(255, 255, 255, 0.9);
       border-radius: 16px;
@@ -610,9 +610,9 @@
           <div class="font-semibold text-sm text-gray-700">Sites</div>
           <div class="text-xs text-gray-500">A partir de R$890</div>
         </a>
-        <a href="precos.html#biopages" class="service-mini p-3 text-center no-underline">
+        <a href="precos.html#biocards" class="service-mini p-3 text-center no-underline">
           <i class="fas fa-link text-2xl text-primary-500 mb-2"></i>
-          <div class="font-semibold text-sm text-gray-700">Bio Pages</div>
+          <div class="font-semibold text-sm text-gray-700">Bio Cards</div>
           <div class="text-xs text-gray-500">Como esta página</div>
         </a>
         <a href="precos.html#sistemas" class="service-mini p-3 text-center no-underline">
@@ -628,7 +628,7 @@
       </div>
     </div>
 
-    <!-- BIOPAGE MAX FEATURES DEMO -->
+    <!-- BIOCARD MAX FEATURES DEMO -->
 
     <!-- Video Section -->
     <div class="multimedia-section p-4 mb-6 fade-in-up">
@@ -679,7 +679,7 @@
         <button class="filter-tab active" onclick="filterProducts('all')">Todos</button>
         <button class="filter-tab" onclick="filterProducts('sites')">Sites</button>
         <button class="filter-tab" onclick="filterProducts('sistemas')">Sistemas</button>
-        <button class="filter-tab" onclick="filterProducts('bio')">Bio Pages</button>
+        <button class="filter-tab" onclick="filterProducts('bio')">Bio Cards</button>
       </div>
 
       <div class="product-grid">
@@ -860,7 +860,7 @@
     <div class="text-center text-white/80 fade-in-up">
       <p class="text-sm mb-1">© 2025 Dharma Labs</p>
       <p class="text-xs mb-3 text-white/60">CNPJ: 54.891.649/0001-79</p>
-      <a href="precos.html#biopages"
+      <a href="precos.html#biocards"
          class="text-accent-400 hover:text-accent-300 text-xs font-medium no-underline bg-white/10 px-4 py-2 rounded-full backdrop-blur-sm">
         ✨ Quer uma bio page assim? Clique aqui!
       </a>
@@ -879,7 +879,7 @@
       'Sites que Convertem',
       'Sistemas Inteligentes',
       'Dashboards com IA',
-      'Bio Pages Premium'
+      'Bio Cards Premium'
     ];
 
     let textIndex = 0;
@@ -946,7 +946,7 @@
     // Add smooth scroll behavior
     document.documentElement.style.scrollBehavior = 'smooth';
 
-    // BIOPAGE MAX FEATURES JAVASCRIPT
+    // BIOCARD MAX FEATURES JAVASCRIPT
 
     // Multi-step form functionality
     let currentStep = 1;
@@ -1096,7 +1096,7 @@ Gostaria de solicitar orçamento oficial!`;
 
     // Multimedia functions
     function playVideo() {
-      alert('🎥 Aqui seria reproduzido um vídeo de apresentação da empresa.\n\nEsta é uma demonstração das funcionalidades da BioPage Max!');
+      alert('🎥 Aqui seria reproduzido um vídeo de apresentação da empresa.\n\nEsta é uma demonstração das funcionalidades da BioCard Max!');
     }
 
     function openGallery(imageIndex) {
@@ -1109,7 +1109,7 @@ Gostaria de solicitar orçamento oficial!`;
         'Ver mais projetos...'
       ];
 
-      alert(`📸 ${images[imageIndex - 1]}\n\nAqui seria aberta uma galeria completa de imagens dos projetos.\n\nFuncionalidade da BioPage Max!`);
+      alert(`📸 ${images[imageIndex - 1]}\n\nAqui seria aberta uma galeria completa de imagens dos projetos.\n\nFuncionalidade da BioCard Max!`);
     }
 
     // Start countdown when page loads
